<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.InsertarCurso.InsertarCursoFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="25dp">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Insertar Curso"
            android:textSize="35sp"
            android:gravity="center"/>
        <EditText
            android:id="@+id/edtIdIC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/edt_codigo"
            android:layout_marginTop="15dp" />

        <EditText
            android:id="@+id/edtNombreoIC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/edt_nombre"
            android:layout_marginTop="15dp" />

        <EditText
            android:id="@+id/edtDescripcionIC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/edt_descripcion"
            android:layout_marginTop="15dp" />
        <EditText
            android:id="@+id/edtNivelIC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/edt_nivel"
            android:layout_marginTop="15dp" />

        <EditText
            android:id="@+id/edtHorasTeoriaIC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned"
            android:hint="@string/edt_horas_teoria"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/edtHorasPracticaIC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned"
            android:hint="@string/edt_horas_practica"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/edtProyectoCursoIC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/edt_proyecto"
            android:layout_marginTop="10dp"/>

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/imgMostrarImageIC"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            tools:srcCompat="@mipmap/ic_camera"
            android:layout_marginTop="10dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <Button
                android:id="@+id/btnCargarImagenIC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_insertar_imagen"
                android:layout_gravity="center"
                android:backgroundTint="@color/plomo"/>

            <Button
                android:id="@+id/btnInsertCurso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_fragme_registrar"/>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>