<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_insertar_curso">

    <fragment
        android:id="@+id/nav_insertar_curso"
        android:name="com.example.cahuaya_evalparcial.ui.InsertarCurso.InsertarCursoFragment"
        android:label="@string/menu_insertar_curso"
        tools:layout="@layout/fragment_insertar_curso" />

    <fragment
        android:id="@+id/nav_buscar_curso"
        android:name="com.example.cahuaya_evalparcial.ui.BuscarCurso.BuscarCursoFragment"
        android:label="@string/menu_buscar_curso"
        tools:layout="@layout/fragment_buscar_curso" />

    <fragment
        android:id="@+id/nav_listar_curso"
        android:name="com.example.cahuaya_evalparcial.ui.ListarCurso.ListarCursoFragment"
        android:label="@string/menu_listar_curso"
        tools:layout="@layout/fragment_listar_curso" />
</navigation>